# Phase 1 渲染相关测试

file(TO_CMAKE_PATH "${CMAKE_SOURCE_DIR}" PROJECT_SOURCE_DIR_POSIX)

add_executable(mesh_tangent_test mesh_tangent_test.cpp)
add_executable(model_loader_regression_test model_loader_regression_test.cpp)
add_executable(renderer_layer_mask_test renderer_layer_mask_test.cpp)
add_executable(application_boot_scene_test application_boot_scene_test.cpp)
add_executable(application_boot_scene_sync_test application_boot_scene_sync_test.cpp)
add_executable(scene_graph_demo_test scene_graph_demo_test.cpp)
add_executable(application_boot_scene_module_matrix_test application_boot_scene_module_matrix_test.cpp)
add_executable(async_resource_loader_failure_test async_resource_loader_failure_test.cpp)
add_executable(scene_manager_resource_test scene_manager_resource_test.cpp)
add_executable(scene_manager_stress_test scene_manager_stress_test.cpp)

# ============================================================================
# P1-2.3: Transform 内存布局优化测试
# ============================================================================
add_executable(test_memory_layout_optimization test_memory_layout_optimization.cpp)

# ============================================================================
# P2-3.1: Transform 统一错误处理测试
# ============================================================================
add_executable(test_transform_error_handling test_transform_error_handling.cpp)

# ============================================================================
# 阶段1: TaskScheduler 单元测试
# ============================================================================
add_executable(test_task_scheduler test_task_scheduler.cpp)
add_executable(test_physics_components test_physics_components.cpp)
add_executable(test_physics_math test_physics_math.cpp)
add_executable(test_collision_shapes test_collision_shapes.cpp)
add_executable(test_broad_phase test_broad_phase.cpp)
add_executable(test_collision_detection test_collision_detection.cpp)
add_executable(test_gjk test_gjk.cpp)
add_executable(test_collision_system test_collision_system.cpp)
add_executable(test_force_and_impulse_system test_force_and_impulse_system.cpp)
add_executable(test_physics_update_system_interpolation test_physics_update_system_interpolation.cpp)
add_executable(test_physics_sleeping test_physics_sleeping.cpp)
add_executable(test_constraint_solver test_constraint_solver.cpp)
add_executable(test_joint_constraints test_joint_constraints.cpp)
add_executable(test_physics_transform_sync test_physics_transform_sync.cpp)
add_executable(test_physics_full_pipeline test_physics_full_pipeline.cpp)
add_executable(test_ccd_basic test_ccd_basic.cpp)
add_executable(test_ccd_sphere test_ccd_sphere.cpp)
add_executable(test_ccd_integration test_ccd_integration.cpp)

# Bullet Adapter 测试（仅在启用 Bullet 时编译）
if(ENABLE_PHYSICS AND USE_BULLET_PHYSICS)
    add_executable(test_bullet_adapter_eigen_to_bullet test_bullet_adapter_eigen_to_bullet.cpp)
    add_executable(test_bullet_adapter_shape test_bullet_adapter_shape.cpp)
    add_executable(test_bullet_adapter_rigid_body test_bullet_adapter_rigid_body.cpp)
    add_executable(test_bullet_adapter_world test_bullet_adapter_world.cpp)
endif()

target_link_libraries(mesh_tangent_test PRIVATE RenderEngine)
target_link_libraries(model_loader_regression_test PRIVATE RenderEngine)
target_link_libraries(renderer_layer_mask_test PRIVATE RenderEngine)
target_link_libraries(application_boot_scene_test PRIVATE RenderEngine)
target_link_libraries(application_boot_scene_module_matrix_test PRIVATE RenderEngine)
target_link_libraries(application_boot_scene_sync_test PRIVATE RenderEngine)
target_link_libraries(scene_graph_demo_test PRIVATE RenderEngine)
target_link_libraries(async_resource_loader_failure_test PRIVATE RenderEngine)
target_link_libraries(scene_manager_resource_test PRIVATE RenderEngine)
target_link_libraries(scene_manager_stress_test PRIVATE RenderEngine)
target_link_libraries(test_memory_layout_optimization PRIVATE RenderEngine)
target_link_libraries(test_transform_error_handling PRIVATE RenderEngine)
target_link_libraries(test_task_scheduler PRIVATE RenderEngine)
target_link_libraries(test_physics_components PRIVATE RenderEngine)
target_link_libraries(test_physics_math PRIVATE RenderEngine)
target_link_libraries(test_collision_shapes PRIVATE RenderEngine)
target_link_libraries(test_broad_phase PRIVATE RenderEngine)
target_link_libraries(test_collision_detection PRIVATE RenderEngine)
target_link_libraries(test_gjk PRIVATE RenderEngine)
target_link_libraries(test_collision_system PRIVATE RenderEngine)
target_link_libraries(test_force_and_impulse_system PRIVATE RenderEngine)
target_link_libraries(test_physics_update_system_interpolation PRIVATE RenderEngine)
target_link_libraries(test_physics_sleeping PRIVATE RenderEngine)
target_link_libraries(test_constraint_solver PRIVATE RenderEngine)
target_link_libraries(test_joint_constraints PRIVATE RenderEngine)
target_link_libraries(test_physics_transform_sync PRIVATE RenderEngine)
target_link_libraries(test_physics_full_pipeline PRIVATE RenderEngine)
target_link_libraries(test_ccd_basic PRIVATE RenderEngine)
target_link_libraries(test_ccd_sphere PRIVATE RenderEngine)
target_link_libraries(test_ccd_integration PRIVATE RenderEngine)

if(ENABLE_PHYSICS AND USE_BULLET_PHYSICS)
    target_link_libraries(test_bullet_adapter_eigen_to_bullet PRIVATE RenderEngine)
    target_link_libraries(test_bullet_adapter_shape PRIVATE RenderEngine)
    target_link_libraries(test_bullet_adapter_rigid_body PRIVATE RenderEngine)
    target_link_libraries(test_bullet_adapter_world PRIVATE RenderEngine)
endif()

target_compile_definitions(mesh_tangent_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(model_loader_regression_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(renderer_layer_mask_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(application_boot_scene_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(application_boot_scene_module_matrix_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(application_boot_scene_sync_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(scene_graph_demo_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(async_resource_loader_failure_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(scene_manager_resource_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(scene_manager_stress_test PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_memory_layout_optimization PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_transform_error_handling PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_task_scheduler PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_components PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_math PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_collision_shapes PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_broad_phase PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_collision_detection PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_gjk PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_collision_system PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_force_and_impulse_system PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_update_system_interpolation PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_sleeping PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_constraint_solver PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_joint_constraints PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_transform_sync PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_physics_full_pipeline PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_ccd_basic PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_ccd_sphere PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
target_compile_definitions(test_ccd_integration PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")

if(ENABLE_PHYSICS AND USE_BULLET_PHYSICS)
    target_compile_definitions(test_bullet_adapter_eigen_to_bullet PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
    target_compile_definitions(test_bullet_adapter_eigen_to_bullet PRIVATE USE_BULLET_PHYSICS)
    target_compile_definitions(test_bullet_adapter_shape PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
    target_compile_definitions(test_bullet_adapter_shape PRIVATE USE_BULLET_PHYSICS)
    target_compile_definitions(test_bullet_adapter_rigid_body PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
    target_compile_definitions(test_bullet_adapter_rigid_body PRIVATE USE_BULLET_PHYSICS)
    target_compile_definitions(test_bullet_adapter_world PRIVATE PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR_POSIX}")
    target_compile_definitions(test_bullet_adapter_world PRIVATE USE_BULLET_PHYSICS)
endif()

if(MSVC)
    target_compile_options(mesh_tangent_test PRIVATE /utf-8)
    target_compile_options(model_loader_regression_test PRIVATE /utf-8)
    target_compile_options(renderer_layer_mask_test PRIVATE /utf-8)
    target_compile_options(application_boot_scene_test PRIVATE /utf-8)
    target_compile_options(application_boot_scene_module_matrix_test PRIVATE /utf-8)
    target_compile_options(application_boot_scene_sync_test PRIVATE /utf-8)
    target_compile_options(scene_graph_demo_test PRIVATE /utf-8)
    target_compile_options(async_resource_loader_failure_test PRIVATE /utf-8)
    target_compile_options(scene_manager_resource_test PRIVATE /utf-8)
    target_compile_options(scene_manager_stress_test PRIVATE /utf-8)
    target_compile_options(test_memory_layout_optimization PRIVATE /utf-8)
    target_compile_options(test_transform_error_handling PRIVATE /utf-8)
    target_compile_options(test_task_scheduler PRIVATE /utf-8)
    target_compile_options(test_physics_components PRIVATE /utf-8)
    target_compile_options(test_physics_math PRIVATE /utf-8)
    target_compile_options(test_collision_shapes PRIVATE /utf-8)
    target_compile_options(test_broad_phase PRIVATE /utf-8)
    target_compile_options(test_collision_detection PRIVATE /utf-8)
    target_compile_options(test_gjk PRIVATE /utf-8)
    target_compile_options(test_collision_system PRIVATE /utf-8)
    target_compile_options(test_force_and_impulse_system PRIVATE /utf-8)
    target_compile_options(test_physics_update_system_interpolation PRIVATE /utf-8)
    target_compile_options(test_physics_sleeping PRIVATE /utf-8)
    target_compile_options(test_constraint_solver PRIVATE /utf-8)
    target_compile_options(test_joint_constraints PRIVATE /utf-8)
    target_compile_options(test_physics_transform_sync PRIVATE /utf-8)
    target_compile_options(test_physics_full_pipeline PRIVATE /utf-8)
    target_compile_options(test_ccd_basic PRIVATE /utf-8)
    target_compile_options(test_ccd_sphere PRIVATE /utf-8)
    target_compile_options(test_ccd_integration PRIVATE /utf-8)
    
    if(ENABLE_PHYSICS AND USE_BULLET_PHYSICS)
        target_compile_options(test_bullet_adapter_eigen_to_bullet PRIVATE /utf-8)
        target_compile_options(test_bullet_adapter_shape PRIVATE /utf-8)
        target_compile_options(test_bullet_adapter_rigid_body PRIVATE /utf-8)
        target_compile_options(test_bullet_adapter_world PRIVATE /utf-8)
    endif()
endif()

add_test(NAME mesh_tangent_test COMMAND mesh_tangent_test)
add_test(NAME model_loader_regression_test COMMAND model_loader_regression_test)
add_test(NAME renderer_layer_mask_test COMMAND renderer_layer_mask_test)
add_test(NAME application_boot_scene_test COMMAND application_boot_scene_test)
add_test(NAME application_boot_scene_module_matrix_test COMMAND application_boot_scene_module_matrix_test)
add_test(NAME application_boot_scene_sync_test COMMAND application_boot_scene_sync_test)
add_test(NAME scene_graph_demo_test COMMAND scene_graph_demo_test)
add_test(NAME async_resource_loader_failure_test COMMAND async_resource_loader_failure_test)
add_test(NAME scene_manager_resource_test COMMAND scene_manager_resource_test)
add_test(NAME scene_manager_stress_test COMMAND scene_manager_stress_test)
add_test(NAME test_memory_layout_optimization COMMAND test_memory_layout_optimization)
add_test(NAME test_transform_error_handling COMMAND test_transform_error_handling)
add_test(NAME test_task_scheduler COMMAND test_task_scheduler)
add_test(NAME test_physics_components COMMAND test_physics_components)
add_test(NAME test_physics_math COMMAND test_physics_math)
add_test(NAME test_collision_shapes COMMAND test_collision_shapes)
add_test(NAME test_broad_phase COMMAND test_broad_phase)
add_test(NAME test_collision_detection COMMAND test_collision_detection)
add_test(NAME test_gjk COMMAND test_gjk)
add_test(NAME test_collision_system COMMAND test_collision_system)
add_test(NAME test_force_and_impulse_system COMMAND test_force_and_impulse_system)
add_test(NAME test_physics_update_system_interpolation COMMAND test_physics_update_system_interpolation)
add_test(NAME test_physics_sleeping COMMAND test_physics_sleeping)
add_test(NAME test_constraint_solver COMMAND test_constraint_solver)
add_test(NAME test_joint_constraints COMMAND test_joint_constraints)
add_test(NAME test_physics_transform_sync COMMAND test_physics_transform_sync)
add_test(NAME test_physics_full_pipeline COMMAND test_physics_full_pipeline)
add_test(NAME test_ccd_basic COMMAND test_ccd_basic)
add_test(NAME test_ccd_sphere COMMAND test_ccd_sphere)
add_test(NAME test_ccd_integration COMMAND test_ccd_integration)

if(ENABLE_PHYSICS AND USE_BULLET_PHYSICS)
    add_test(NAME test_bullet_adapter_eigen_to_bullet COMMAND test_bullet_adapter_eigen_to_bullet)
    add_test(NAME test_bullet_adapter_shape COMMAND test_bullet_adapter_shape)
    add_test(NAME test_bullet_adapter_rigid_body COMMAND test_bullet_adapter_rigid_body)
    add_test(NAME test_bullet_adapter_world COMMAND test_bullet_adapter_world)
endif()